Removed parent pom file.